--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <img class="logo" src="images/logo (1).png">
     <ul>
       <li><a href="#">Home</a></li>
-      <li><a href="#">Bedroom</a></li>
-      <li><a href="#">Dining</a></li>
-      <li><a href="#">Kitchen</a></li>
+      <li><a href="#">Bedrooms</a></li>
+      <li><a href="#">Bathroom</a></li>
       <li><a href="#">Backyard</a></li>
+      <li><a href="#">Full Interior</a></li>
     </ul>
   </div>
 
